force-app/main/default/objects/Branch_Information__c/Branch_Information__c.object-meta.xml
<CustomObject>
    <label>支社情報</label>
    <nameField>
        <label>支社情報</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>