force-app/main/default/objects/Branch_Information__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>支社情報</relationshipLabel>
    <relationshipName>BranchAccount</relationshipName>
    <type>Lookup</type>
</CustomField>