force-app/main/default/objects/Branch_Information__c/fields/ConstructionShops__c.field-meta.xml
<CustomField>
    <fullName>ConstructionShops__c</fullName>
    <label>関わる工事店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>