force-app/main/default/objects/Branch_Information__c/fields/DX_History__c.field-meta.xml
<CustomField>
    <fullName>DX_History__c</fullName>
    <label>野原との歴史</label>
    <type>TextArea</type>
</CustomField>