force-app/main/default/objects/Branch_Information__c/fields/DX_Organizations__c.field-meta.xml
<CustomField>
    <fullName>DX_Organizations__c</fullName>
    <label>属している団体（日建連など）</label>
    <type>TextArea</type>
</CustomField>