force-app/main/default/objects/Branch_Information__c/fields/GC__c.field-meta.xml
<CustomField>
    <fullName>GC__c</fullName>
    <label>協力しているGC</label>
    <type>TextArea</type>
</CustomField>